--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "documenter-redone",
+  "homepage": ".",
+  "name": "documenter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-md-editor": "^3.9.5",
+    "bootstrap": "^5.1.3",
+    "file-saver": "^2.0.5",
+    "front-matter": "^4.0.2",
+    "handlebars": "^4.7.7",
+    "jszip": "^3.7.1",
+    "papaparse": "^5.3.1",
+    "pouchdb": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-notifications": "^1.7.3",
+    "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
